uso de selectores

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clase Fullstack</title>
+        <link rel="stylesheet" href="styles.css">
       
     </head>
 <body>
     <!-- comentarios comand shift 7  -->
    <header>   
-    <h1>Hola mundo</h1> 
+    <h1 style="display:inline";>Hola mundo</h1> 
     <h2>Hola mundo</h2> 
     <h3>Hola mundo</h3> 
     <h4>Hola mundo</h4> 
     <h5>Hola mundo</h5> 
     <a href="https://github.com/anajacobo01/fullstackjs" target="_blank">SSH</a>
-    <section>
+    <section class=container>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/gBIGdJrSkMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <ol>
@@ -29,7 +30,13 @@
         <ul>
             <li>poner mayonesa</li>
             <li>colocar jamon </li>
-            <li>colocar queso </li>
+            <li> 
+                <ul>
+                     <li>colocar jamon </li>
+                    <li>colocar queso </li>
+                     <li>colocar jitomate</li>
+                     <li>colocar la pieza de pan </li>
+            </ul> </li>
             <li>colocar jitomate</li>
             <li>colocar la pieza de pan </li>
         </ul>
@@ -40,8 +47,8 @@
             <li>colocar jitomate</li>
             <li>colocar la pieza de pan </li>
         </ul>
-        <div>
-          
+        <div >
+          <p id=parrafo>   parrafo </p>
         </div>
  
     </header>
